force-app/main/default/objects/KCPQ_Pricebook_Page__c/KCPQ_Pricebook_Page__c.object-meta.xml
<CustomObject>
    <label>Pricebook Page</label>
    <nameField>
        <label>Pricebook Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricebook Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>