force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Discount_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Discount_Group_ID__c</fullName>
    <label>Discount Group ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>