force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>