force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>