force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Price_Family__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Price_Family__c</fullName>
    <label>Price Family</label>
    <length>100</length>
    <type>Text</type>
</CustomField>