force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Price_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Price_Multiplier__c</fullName>
    <label>Price Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>