force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Pricing_Library__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricing_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Library</label>
    <referenceTo>KCPQ_Pricing_Library__c</referenceTo>
    <relationshipLabel>Pricebook Pages</relationshipLabel>
    <relationshipName>Pricebook_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>