force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Source_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Source_Price__c</fullName>
    <label>Source Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price 1</fullName>
            </value>
            <value>
                <fullName>Price 2</fullName>
            </value>
            <value>
                <fullName>Price 3</fullName>
            </value>
            <value>
                <fullName>Price 4</fullName>
            </value>
            <value>
                <fullName>Price 5</fullName>
            </value>
            <value>
                <fullName>Price 6</fullName>
            </value>
            <value>
                <fullName>Price 7</fullName>
            </value>
            <value>
                <fullName>Price 8</fullName>
            </value>
            <value>
                <fullName>Price 9</fullName>
            </value>
            <value>
                <fullName>Price 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>