force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/KCPQ_Status__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>