force-app/main/default/objects/KCPQ_Pricebook_Page__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Pricebook Pages</relationshipLabel>
    <relationshipName>Pricebook_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>