force-app/main/default/objects/KCPQ_Pricebook_Page__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>KCPQ_Discount_Group_ID__c</columns>
    <columns>KCPQ_Effective_Date__c</columns>
    <columns>KCPQ_Expiration_Date__c</columns>
    <columns>KCPQ_Price_Multiplier__c</columns>
    <columns>KCPQ_Pricebook_External_ID__c</columns>
    <columns>KCPQ_Pricing_Library__c</columns>
    <columns>Product__c</columns>
    <columns>KCPQ_Source_Price__c</columns>
    <columns>KCPQ_Status__c</columns>
    <columns>KCPQ_Price_Family__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>